linked license in pom set as the file

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>https://spdx.org/licenses/MIT.html</url>
+            <url>LICENSE</url>
         </license>
     </licenses>
     <organization>
